@@ -115,7 +115,7 @@ public class Search implements WikiPlugin
         log.debug("Searching for string "+query);
 
         @SuppressWarnings("unchecked")
-        Collection<SearchResult> list = context.getEngine().findPages( query );
+        Collection<SearchResult> list = context.getEngine().findPages( query, context );
 
         return list;
     }
