@@ -21,6 +21,7 @@ package org.apache.wiki.search;
 import java.io.IOException;
 import java.util.Collection;
 
+import org.apache.wiki.WikiContext;
 import org.apache.wiki.WikiPage;
 import org.apache.wiki.WikiProvider;
 import org.apache.wiki.api.exceptions.ProviderException;
@@ -50,9 +51,10 @@ public interface SearchProvider extends WikiProvider
     /**
      * Search for pages matching a search query
      * @param query query to search for
+     * @param wikiContext the context within which to run the search
      * @return collection of pages that match query
      * @throws ProviderException if the search provider failed.
      * @throws IOException if for some reason the query could not be executed.
      */
-    Collection findPages(String query) throws ProviderException, IOException;
+    Collection findPages(String query, WikiContext wikiContext) throws ProviderException, IOException;
 }
