@@ -50,35 +50,10 @@
 
         try
         {
-            list = wiki.findPages( query );
+            list = wiki.findPages( query, wikiContext );
 
-            //
-            //  Filter down to only those that we actually have a permission to view
-            //
-            AuthorizationManager mgr = wiki.getAuthorizationManager();
-        
-            ArrayList filteredList = new ArrayList();
-            
-            for( Iterator i = list.iterator(); i.hasNext(); )
-            {
-                SearchResult r = (SearchResult)i.next();
-            
-                WikiPage p = r.getPage();
-            
-                PagePermission pp = new PagePermission( p, PagePermission.VIEW_ACTION );
-
-                try
-                {            
-                    if( mgr.checkPermission( wikiContext.getWikiSession(), pp ) )
-                    {
-                        filteredList.add( r );
-                    }
-                }
-                catch( Exception e ) { log.error( "Searching for page "+p, e ); }
-            }
-        
             pageContext.setAttribute( "searchresults",
-                                      filteredList,
+                                      list,
                                       PageContext.REQUEST_SCOPE );
         }
         catch( Exception e )
