@@ -74,8 +74,11 @@ public class SearchManagerTest extends TestCase {
             } else {
                 break;
             }
-            res = m_mgr.findPages( text );
+            MockHttpServletRequest request = m_engine.newHttpRequest();
+            WikiContext ctx = m_engine.createContext( request, WikiContext.EDIT );
             
+            res = m_mgr.findPages( text, ctx );
+
 //            debugSearchResults( res );
         }
         return res;
@@ -139,16 +142,41 @@ public class SearchManagerTest extends TestCase {
         Thread.yield();
         Collection res = waitForIndex( "Babylon" , "testSimpleSearch3" ); // wait until 2nd m_engine.saveText() takes effect
 
-        res = m_mgr.findPages( "mankind" ); // check for text present in 1st m_engine.saveText() but not in 2nd
+        res = m_mgr.findPages( "mankind", ctx ); // check for text present in 1st m_engine.saveText() but not in 2nd
 
         assertNotNull( "found results", res );
         assertEquals( "empty results", 0, res.size() );
         
-        res = m_mgr.findPages( "Babylon" );
+        res = m_mgr.findPages( "Babylon", ctx );
         assertNotNull( "null result", res );
         assertEquals( "no pages", 1, res.size() );
      
         assertEquals( "page","TestPage", ((SearchResult)res.iterator().next()).getPage().getName() );
+        m_engine.deleteTestPage("TestPage");
+    }
+
+    public void testSimpleSearch4() throws Exception {
+        String txt = "It was the dawn of the third age of mankind, ten years after the Earth-Minbari War.";
+
+        MockHttpServletRequest request = m_engine.newHttpRequest();
+        request.getParameterMap().put( "page", new String[]{ "TestPage" } );
+
+        WikiContext ctx = m_engine.createContext( request, WikiContext.EDIT );
+
+        m_engine.saveText( ctx, txt );
+
+        Thread.yield();
+        Collection res = waitForIndex( "mankind" , "testSimpleSearch4" );
+
+        assertNotNull( "found results", res );
+        assertEquals( "result not found", 1, res.size() );
+
+        m_engine.saveText( ctx, "[{ALLOW view Authenticated}] It was the dawn of the third age of mankind... page is blocked" );
+
+        res = m_mgr.findPages( "mankind" , ctx );
+        assertNotNull( "null result", res );
+        assertEquals( "result found, should be blocked", 0, res.size() );
+
         m_engine.deleteTestPage("TestPage");
     }
 
